<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item android:id="@+id/action_zone"-->
        <!--android:title="@string/zone"-->
        <!--android:orderInCategory="90"-->
        <!--android:icon="@mipmap/biz_forum_author_icon"-->
        <!--app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />


    <item android:id="@+id/action_sort_way"
        android:title="@string/action_sort_way"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="never"/>
    <item android:id="@+id/action_sort_order"
        android:title="@string/action_sort_order"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="never"/>
    <item android:id="@+id/action_options"
        android:title="@string/action_options"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="never"/>
    <item android:id="@+id/action_operation"
        android:title="@string/action_operation"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="never"/>
</menu>